// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnterAddress Component displays form validation errors when continue is pressed with empty fields 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "marginTop": 5,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                  }
                }
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowLeft"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Enter your address
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                style={
                  {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 32,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={24}
                    name="Close"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </TouchableOpacity>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                },
                                {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "paddingVertical": 12,
                                  "width": "100%",
                                }
                              }
                              testID="deposit-progress-container"
                            >
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-0"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-1"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-2"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#2c3dc5",
                                      },
                                    ],
                                    undefined,
                                  ]
                                }
                                testID="deposit-progress-step-3"
                              />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "CentraNo1-Book",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                  "marginBottom": 20,
                                  "marginTop": 24,
                                }
                              }
                            >
                              Please enter your most recent permanent address.
                            </Text>
                            <View
                              style={
                                [
                                  {
                                    "flexDirection": "column",
                                    "marginBottom": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "CentraNo1-Book",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "marginBottom": 6,
                                  }
                                }
                                testID="label"
                              >
                                Address line 1
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#b7bbc8",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "opacity": 1,
                                    "paddingHorizontal": 16,
                                  }
                                }
                                testID="textfield"
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <TextInput
                                    autoFocus={false}
                                    editable={true}
                                    keyboardAppearance="light"
                                    onBlur={[Function]}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Address line 1"
                                    placeholderTextColor="#9ca1af"
                                    returnKeyType="next"
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "transparent",
                                        "borderWidth": 1,
                                        "color": "#121314",
                                        "fontFamily": "CentraNo1-Book",
                                        "fontSize": 16,
                                        "fontWeight": "400",
                                        "height": 24,
                                        "letterSpacing": 0,
                                        "opacity": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    testID="address-line-1-input"
                                    value=""
                                  />
                                </View>
                              </View>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#ca3542",
                                    "fontFamily": "CentraNo1-Book",
                                    "fontSize": 12,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "marginTop": 4,
                                  }
                                }
                              >
                                Address line 1 is required
                              </Text>
                            </View>
                            <View
                              style={
                                [
                                  {
                                    "flexDirection": "column",
                                    "marginBottom": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "CentraNo1-Book",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "marginBottom": 6,
                                  }
                                }
                                testID="label"
                              >
                                Address line 2 (optional)
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#b7bbc8",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "opacity": 1,
                                    "paddingHorizontal": 16,
                                  }
                                }
                                testID="textfield"
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <TextInput
                                    autoFocus={false}
                                    editable={true}
                                    keyboardAppearance="light"
                                    onBlur={[Function]}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Address line 2 (optional)"
                                    placeholderTextColor="#9ca1af"
                                    returnKeyType="next"
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "transparent",
                                        "borderWidth": 1,
                                        "color": "#121314",
                                        "fontFamily": "CentraNo1-Book",
                                        "fontSize": 16,
                                        "fontWeight": "400",
                                        "height": 24,
                                        "letterSpacing": 0,
                                        "opacity": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    testID="address-line-2-input"
                                    value=""
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flexDirection": "row",
                                  "gap": 16,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  City
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="City"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="city-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ca3542",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 12,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  City is required
                                </Text>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  State/Region
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="State/Region"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="state-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ca3542",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 12,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  State/Region is required
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flexDirection": "row",
                                  "gap": 16,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  Postal/Zip Code
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="Postal/Zip Code"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="postal-code-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ca3542",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 12,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  Postal/Zip Code is required
                                </Text>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  Country
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="Country"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="done"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="country-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ca3542",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 12,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  Country is required
                                </Text>
                              </View>
                            </View>
                          </View>
                          <View>
                            <View
                              style={
                                [
                                  {
                                    "padding": 15,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={0.2}
                                  onPress={[Function]}
                                  style={
                                    [
                                      [
                                        {
                                          "borderRadius": 12,
                                          "justifyContent": "center",
                                          "padding": 15,
                                        },
                                        {
                                          "backgroundColor": "#4459ff",
                                          "minHeight": 50,
                                        },
                                        undefined,
                                      ],
                                      null,
                                    ]
                                  }
                                  testID="address-continue-button"
                                >
                                  <Text
                                    style={
                                      [
                                        {
                                          "color": "#007aff",
                                          "fontSize": 17,
                                          "fontWeight": "500",
                                          "textAlign": "center",
                                        },
                                        null,
                                        [
                                          {
                                            "fontFamily": "CentraNo1-Bold",
                                            "fontSize": 14,
                                            "fontWeight": "600",
                                            "textAlign": "center",
                                          },
                                          {
                                            "color": "#ffffff",
                                          },
                                          undefined,
                                        ],
                                        null,
                                      ]
                                    }
                                  >
                                    Continue
                                  </Text>
                                </TouchableOpacity>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`EnterAddress Component render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "marginTop": 5,
                    "paddingLeft": 18,
                    "paddingRight": 18,
                  }
                }
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowLeft"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Enter your address
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                style={
                  {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <TouchableOpacity
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 32,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={24}
                    name="Close"
                    style={
                      {
                        "height": 24,
                        "width": 24,
                      }
                    }
                    width={24}
                  />
                </TouchableOpacity>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                },
                                {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "paddingVertical": 12,
                                  "width": "100%",
                                }
                              }
                              testID="deposit-progress-container"
                            >
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-0"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-1"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#4459ff",
                                      },
                                    ],
                                    {
                                      "marginRight": 10,
                                    },
                                  ]
                                }
                                testID="deposit-progress-step-2"
                              />
                              <View
                                style={
                                  [
                                    [
                                      {
                                        "borderRadius": 2,
                                        "flex": 1,
                                        "height": 4,
                                      },
                                      {
                                        "backgroundColor": "#2c3dc5",
                                      },
                                    ],
                                    undefined,
                                  ]
                                }
                                testID="deposit-progress-step-3"
                              />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "CentraNo1-Book",
                                  "fontSize": 14,
                                  "fontWeight": "400",
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                  "marginBottom": 20,
                                  "marginTop": 24,
                                }
                              }
                            >
                              Please enter your most recent permanent address.
                            </Text>
                            <View
                              style={
                                [
                                  {
                                    "flexDirection": "column",
                                    "marginBottom": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "CentraNo1-Book",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "marginBottom": 6,
                                  }
                                }
                                testID="label"
                              >
                                Address line 1
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#b7bbc8",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "opacity": 1,
                                    "paddingHorizontal": 16,
                                  }
                                }
                                testID="textfield"
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <TextInput
                                    autoFocus={false}
                                    editable={true}
                                    keyboardAppearance="light"
                                    onBlur={[Function]}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Address line 1"
                                    placeholderTextColor="#9ca1af"
                                    returnKeyType="next"
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "transparent",
                                        "borderWidth": 1,
                                        "color": "#121314",
                                        "fontFamily": "CentraNo1-Book",
                                        "fontSize": 16,
                                        "fontWeight": "400",
                                        "height": 24,
                                        "letterSpacing": 0,
                                        "opacity": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    testID="address-line-1-input"
                                    value=""
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                [
                                  {
                                    "flexDirection": "column",
                                    "marginBottom": 16,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "CentraNo1-Book",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "marginBottom": 6,
                                  }
                                }
                                testID="label"
                              >
                                Address line 2 (optional)
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#b7bbc8",
                                    "borderRadius": 8,
                                    "borderWidth": 1,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "opacity": 1,
                                    "paddingHorizontal": 16,
                                  }
                                }
                                testID="textfield"
                              >
                                <View
                                  style={
                                    {
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <TextInput
                                    autoFocus={false}
                                    editable={true}
                                    keyboardAppearance="light"
                                    onBlur={[Function]}
                                    onChangeText={[Function]}
                                    onFocus={[Function]}
                                    placeholder="Address line 2 (optional)"
                                    placeholderTextColor="#9ca1af"
                                    returnKeyType="next"
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "transparent",
                                        "borderWidth": 1,
                                        "color": "#121314",
                                        "fontFamily": "CentraNo1-Book",
                                        "fontSize": 16,
                                        "fontWeight": "400",
                                        "height": 24,
                                        "letterSpacing": 0,
                                        "opacity": 1,
                                        "paddingVertical": 0,
                                      }
                                    }
                                    testID="address-line-2-input"
                                    value=""
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flexDirection": "row",
                                  "gap": 16,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  City
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="City"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="city-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  State/Region
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="State/Region"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="state-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flexDirection": "row",
                                  "gap": 16,
                                  "justifyContent": "space-between",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  Postal/Zip Code
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="Postal/Zip Code"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="next"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="postal-code-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "flexDirection": "column",
                                      "marginBottom": 16,
                                    },
                                    {
                                      "flex": 1,
                                    },
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "CentraNo1-Book",
                                      "fontSize": 16,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                      "marginBottom": 6,
                                    }
                                  }
                                  testID="label"
                                >
                                  Country
                                </Text>
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#b7bbc8",
                                      "borderRadius": 8,
                                      "borderWidth": 1,
                                      "flexDirection": "row",
                                      "height": 48,
                                      "opacity": 1,
                                      "paddingHorizontal": 16,
                                    }
                                  }
                                  testID="textfield"
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <TextInput
                                      autoFocus={false}
                                      editable={true}
                                      keyboardAppearance="light"
                                      onBlur={[Function]}
                                      onChangeText={[Function]}
                                      onFocus={[Function]}
                                      placeholder="Country"
                                      placeholderTextColor="#9ca1af"
                                      returnKeyType="done"
                                      style={
                                        {
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "transparent",
                                          "borderWidth": 1,
                                          "color": "#121314",
                                          "fontFamily": "CentraNo1-Book",
                                          "fontSize": 16,
                                          "fontWeight": "400",
                                          "height": 24,
                                          "letterSpacing": 0,
                                          "opacity": 1,
                                          "paddingVertical": 0,
                                        }
                                      }
                                      testID="country-input"
                                      value=""
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                          <View>
                            <View
                              style={
                                [
                                  {
                                    "padding": 15,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="button"
                                  accessible={true}
                                  activeOpacity={0.2}
                                  onPress={[Function]}
                                  style={
                                    [
                                      [
                                        {
                                          "borderRadius": 12,
                                          "justifyContent": "center",
                                          "padding": 15,
                                        },
                                        {
                                          "backgroundColor": "#4459ff",
                                          "minHeight": 50,
                                        },
                                        undefined,
                                      ],
                                      null,
                                    ]
                                  }
                                  testID="address-continue-button"
                                >
                                  <Text
                                    style={
                                      [
                                        {
                                          "color": "#007aff",
                                          "fontSize": 17,
                                          "fontWeight": "500",
                                          "textAlign": "center",
                                        },
                                        null,
                                        [
                                          {
                                            "fontFamily": "CentraNo1-Bold",
                                            "fontSize": 14,
                                            "fontWeight": "600",
                                            "textAlign": "center",
                                          },
                                          {
                                            "color": "#ffffff",
                                          },
                                          undefined,
                                        ],
                                        null,
                                      ]
                                    }
                                  >
                                    Continue
                                  </Text>
                                </TouchableOpacity>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
